force-app/main/default/objects/Retrial_error_code__mdt/Retrial_error_code__mdt.object-meta.xml
<CustomObject>
    <label>Retrial error code</label>
    <pluralLabel>Retrial error codes</pluralLabel>
</CustomObject>