force-app/main/default/objects/Retrial_error_code__mdt/fields/Error_code__c.field-meta.xml
<CustomField>
    <fullName>Error_code__c</fullName>
    <label>Error code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>