force-app/main/default/objects/Retrial_error_code__mdt/fields/Error_Description__c.field-meta.xml
<CustomField>
    <fullName>Error_Description__c</fullName>
    <label>Error Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>