force-app/main/default/objects/Retrial_error_code__mdt/fields/Is_Standard_Error__c.field-meta.xml
<CustomField>
    <fullName>Is_Standard_Error__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard Error</label>
    <type>Checkbox</type>
</CustomField>